welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: not found: value i
			if (nums(i)==9){
                                 ^